objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Job_Application__r.Candidate__r.First_Name__c &amp;&quot; &quot;&amp; Job_Application__r.Candidate__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Competencies_Comments__c</fullName>
        <label>Core Competencies Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Competencies__c</fullName>
        <inlineHelpText>For this category, rate candidate on a scale of 1 (lowest) to 5 (highest)</inlineHelpText>
        <label>Core Competencies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience_Comments__c</fullName>
        <label>Experience Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <inlineHelpText>For this category, rate candidate on a scale of 1 (lowest) to 5 (highest)</inlineHelpText>
        <label>Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>Interviewer__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Leadership_Skills_Comments__c</fullName>
        <label>Leadership Skills Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Leadership_Skills__c</fullName>
        <inlineHelpText>For this category, rate candidate on a scale of 1 (lowest) to 5 (highest)</inlineHelpText>
        <label>Leadership Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Review_Score__c</fullName>
        <formula>( VALUE(TEXT(Core_Competencies__c)) + VALUE(TEXT(Experience__c)) + VALUE(TEXT(Leadership_Skills__c)) + IF( Recommend_for_Hire__c , 5, 0) ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Review Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <formula>Job_Application__r.Position__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Recommended__c</fullName>
        <label>Reason Recommended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommend_for_Hire__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you recommend that we hire this candidate?</inlineHelpText>
        <label>Recommend for Hire</label>
        <type>Checkbox</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>